--- a/Session 12/Assignment12.ipynb
+++ b/Session 12/Assignment12.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "! git clone https://github.com/shashankhalo7/era1.git\n",
+        "%cd era1/Session\\ 12"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "aO-7t1Y7-hV4"
