--- a/Session 12/Assignment12.ipynb
+++ b/Session 12/Assignment12.ipynb
@@ -76,7 +76,7 @@
         }
       ],
       "source": [
-        "!pip install -r /content/src/requirements.txt"
+        "!pip install -r src/requirements.txt"
       ]
     },
     {
