Fix bugs and tensorboard

--- a/Session 12/Assignment12.ipynb
+++ b/Session 12/Assignment12.ipynb
@@ -738,6 +738,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Start tensorboard.\n",
+        "%load_ext tensorboard\n",
+        "%tensorboard --logdir lightning_logs/"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 7,
       "metadata": {
         "colab": {
